apex-job/src/engine/domain/objects/JobRequest__c/fields/Argument__c.field-meta.xml
<CustomField>
    <fullName>Argument__c</fullName>
    <label>Argument</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>