apex-job/src/engine/domain/objects/JobRequest__c/fields/JobDescription__c.field-meta.xml
<CustomField>
    <fullName>JobDescription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Description</label>
    <referenceTo>JobDescription__c</referenceTo>
    <relationshipLabel>Job Requests</relationshipLabel>
    <relationshipName>JobRequests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>