apex-job/src/engine/domain/objects/JobRequest__c/fields/JobIds__c.field-meta.xml
<CustomField>
    <fullName>JobIds__c</fullName>
    <description>List of AsyncApexJobIds separated by semi-colon</description>
    <label>Job Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>