apex-job/src/engine/domain/objects/JobRequest__c/fields/LastExecutionDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastExecutionDateTime__c</fullName>
    <label>Last Execution Date Time</label>
    <type>DateTime</type>
</CustomField>