apex-job/src/engine/domain/objects/JobRequest__c/fields/LastExecutionMessage__c.field-meta.xml
<CustomField>
    <fullName>LastExecutionMessage__c</fullName>
    <label>Last Execution Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>