apex-job/src/engine/domain/objects/JobRequest__c/fields/ProcessingTime__c.field-meta.xml
<CustomField>
    <fullName>ProcessingTime__c</fullName>
    <description>Time spent to process this job in milliseconds, from scheduled time to end</description>
    <label>Processing Time (ms)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>