apex-job/src/engine/domain/objects/JobRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABORTED</fullName>
                <label>Aborted</label>
            </value>
            <value>
                <fullName>FAILURE</fullName>
                <label>Failure</label>
            </value>
            <value>
                <fullName>KILLED</fullName>
                <label>Killed</label>
            </value>
            <value>
                <fullName>MALFORMED_ARGUMENT</fullName>
                <label>Malformed Argument</label>
            </value>
            <value>
                <fullName>READY</fullName>
                <default>true</default>
                <label>Ready</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
                <label>Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>