apex-job/src/engine/domain/objects/JobRequest__c/fields/UnitRunTime__c.field-meta.xml
<CustomField>
    <fullName>UnitRunTime__c</fullName>
    <description>Deduced Unit Time (based on the chunk size) spent executing this job in milliseconds</description>
    <label>Unit Run Time (derived in ms)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>